yaml/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "||appName||-||envName||"
  namespace: "||namespace||"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "||appName||-||envName||"
  template:
    metadata:
      labels:
        app: "||appName||-||envName||"
        logging: enabled
    spec:
      terminationGracePeriodSeconds: 100
      containers:
      - image: "||registry||/||imageName||:||version||"
        name:  "||appName||-||envName||"
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/localtime
          name: tz-config
        resources:
          limits:
            memory: "1Gi"
          requests:
            memory: "512Mi"
      volumes:
      - hostPath:
          path: /usr/share/zoneinfo/Europe/Moscow
          type: ""
        name: tz-config
---
apiVersion: v1
kind: Service
metadata:
  name:  "||appName||-service-||envName||"
  namespace: "||namespace||"
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app:  "||appName||-||envName||"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "||appName||-ingress-||envName||"
  namespace: "||namespace||"
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
spec:
  rules:
  - host: "||hostName||"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: "||appName||-service-||envName||"
            port:
              number: 80
